// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-action-chip component render with correct \`type\` when prop defined 1`] = `
<ic-action-chip label="Medium" type="submit">
  <template shadowrootmode="open">
    <button class="chip filled medium" type="submit">
      <ic-typography class="label" variant="label">
        <span>
          Medium
        </span>
      </ic-typography>
    </button>
  </template>
</ic-action-chip>
`;

exports[`ic-action-chip component should apply the \`theme\` and \`monochrome\` props correctly 1`] = `
<ic-action-chip class="ic-theme-dark" label="Medium" monochrome="true" theme="dark">
  <template shadowrootmode="open">
    <button class="chip filled medium monochrome" type="button">
      <ic-typography class="label" variant="label">
        <span>
          Medium
        </span>
      </ic-typography>
    </button>
  </template>
</ic-action-chip>
`;

exports[`ic-action-chip component should ignore \`transparent-background\` when the variant is \`filled\` 1`] = `
<ic-action-chip label="Medium" transparent-background="false">
  <template shadowrootmode="open">
    <button class="chip filled medium" type="button">
      <ic-typography class="label" variant="label">
        <span>
          Medium
        </span>
      </ic-typography>
    </button>
  </template>
</ic-action-chip>
`;

exports[`ic-action-chip component should render disabled 1`] = `
<ic-action-chip disabled="true" label="Medium">
  <template shadowrootmode="open">
    <button class="chip disabled filled medium" disabled="" type="button">
      <ic-typography class="label" variant="label">
        <span>
          Medium
        </span>
      </ic-typography>
    </button>
  </template>
</ic-action-chip>
`;

exports[`ic-action-chip component should render disabled: disabled-removed 1`] = `
<ic-action-chip label="Medium">
  <template shadowrootmode="open">
    <button class="chip filled medium" type="button">
      <ic-typography class="label" variant="label">
        <span>
          Medium
        </span>
      </ic-typography>
    </button>
  </template>
</ic-action-chip>
`;

exports[`ic-action-chip component should render filled by default 1`] = `
<ic-action-chip label="Medium">
  <template shadowrootmode="open">
    <button class="chip filled medium" type="button">
      <ic-typography class="label" variant="label">
        <span>
          Medium
        </span>
      </ic-typography>
    </button>
  </template>
</ic-action-chip>
`;

exports[`ic-action-chip component should render large 1`] = `
<ic-action-chip label="Large" size="large">
  <template shadowrootmode="open">
    <button class="chip filled large" type="button">
      <ic-typography class="label" variant="label">
        <span>
          Large
        </span>
      </ic-typography>
    </button>
  </template>
</ic-action-chip>
`;

exports[`ic-action-chip component should render outlined when supplying the \`variant\` prop 1`] = `
<ic-action-chip label="Medium" variant="outlined">
  <template shadowrootmode="open">
    <button class="chip medium outlined" type="button">
      <ic-typography class="label" variant="label">
        <span>
          Medium
        </span>
      </ic-typography>
    </button>
  </template>
</ic-action-chip>
`;

exports[`ic-action-chip component should render small 1`] = `
<ic-action-chip label="Small" size="small">
  <template shadowrootmode="open">
    <button class="chip filled small" type="button">
      <ic-typography class="label" variant="label">
        <span>
          Small
        </span>
      </ic-typography>
    </button>
  </template>
</ic-action-chip>
`;

exports[`ic-action-chip component should render with "a" tag when href is passed 1`] = `
<ic-action-chip href="#" label="Medium">
  <template shadowrootmode="open">
    <a class="chip filled medium" href="#">
      <ic-typography class="label" variant="label">
        <span>
          Medium
        </span>
      </ic-typography>
    </a>
  </template>
</ic-action-chip>
`;

exports[`ic-action-chip component should render with a badge 1`] = `
<ic-action-chip label="Medium">
  <template shadowrootmode="open">
    <button class="chip filled medium" type="button">
      <ic-typography class="label" variant="label">
        <span>
          Medium
        </span>
      </ic-typography>
      <slot name="badge"></slot>
    </button>
  </template>
  <ic-badge label="1" slot="badge" variant="success"></ic-badge>
</ic-action-chip>
`;

exports[`ic-action-chip component should render with a solid background when outlined but \`transparent-background\` is \`false\` 1`] = `
<ic-action-chip label="Medium" transparent-background="false" variant="outlined">
  <template shadowrootmode="open">
    <button class="chip medium non-transparent outlined" type="button">
      <ic-typography class="label" variant="label">
        <span>
          Medium
        </span>
      </ic-typography>
    </button>
  </template>
</ic-action-chip>
`;

exports[`ic-action-chip component should render with an icon 1`] = `
<ic-action-chip label="Medium">
  <template shadowrootmode="open">
    <button class="chip filled medium" type="button">
      <div class="icon">
        <slot name="icon"></slot>
      </div>
      <ic-typography class="label" variant="label">
        <span>
          Medium
        </span>
      </ic-typography>
    </button>
  </template>
  <svg aria-label="account" fill="currentColor" height="20" slot="icon" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
    <path d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM10 3C11.66 3 13 4.34 13 6C13 7.66 11.66 9 10 9C8.34 9 7 7.66 7 6C7 4.34 8.34 3 10 3ZM10 17.2C7.5 17.2 5.29 15.92 4 13.98C4.03 11.99 8 10.9 10 10.9C11.99 10.9 15.97 11.99 16 13.98C14.71 15.92 12.5 17.2 10 17.2Z"></path>
  </svg>
</ic-action-chip>
`;

exports[`ic-action-chip component should render with defined "a" tag props 1`] = `
<ic-action-chip download="true" href="#" label="Medium" rel="nofollow" target="_blank">
  <template shadowrootmode="open">
    <a class="chip filled medium" download="true" href="#" rel="nofollow" target="_blank">
      <ic-typography class="label" variant="label">
        <span>
          Medium
        </span>
      </ic-typography>
      <span class="open-in-new-icon">
        svg
      </span>
    </a>
  </template>
</ic-action-chip>
`;

exports[`ic-action-chip component should test button as submit button on form 1`] = `
<ic-action-chip form="new-form" id="form-submit-chip" label="Medium" type="submit">
  <template shadowrootmode="open">
    <button class="chip filled medium" form="new-form" type="submit">
      <ic-typography class="label" variant="label">
        <span>
          Medium
        </span>
      </ic-typography>
    </button>
  </template>
</ic-action-chip>
`;
